--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     },
     "scripts": {
         "predeploy": "npm run build",
-        "deploy": "netlify deploy -p",
+        "deploy": "netlify deploy -p & json-server --watch db.json",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
